--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <link href="style.css" rel="stylesheet">
         <title>La primera página</title>
     </head>
     <body>
       <h1>La primera página</h1>
       <h2>En la clase de gráfico</h2>
-      <img src="img/02 Hoodie.jpg">
+      <img src="img/02 Hoodie.jpg" class=hoodie>
       <img src="https://media4.giphy.com/media/JIX9t2j0ZTN9S/giphy.gif?cid=ecf05e47lmmvr74wwg1t24lgtsw7135jx6h5dr8y2c7fnepg&rid=giphy.gif&ct=g">
 </body>
 </html>
